# GAP

./: branch_and_bound_assignment_1.py  pyproject.toml  requirements.txt  run_bb.py  run_ennsga2.py  run_nsga2.py
configs/branch_and_bound/: default.yaml  quick.yaml
configs/ennsga2/: paper.yaml  quick.yaml
configs/nsga2/: nsga2_paper.yaml  nsga2_quick.yaml
docs/: README_BB.md  README_GAP_NSGA2.md  README_enNSGA2.md
examples/: example_5x12.xlsx
methods/: __init__.py
methods/branch_and_bound/: __init__.py  cli.py  config.py  core.py  data_io.py
methods/ennsga2/: __init__.py  cli.py  config.py  core.py  selection.py
methods/nsga2/: __init__.py  cli.py  config.py  core.py  data_io.py
